--- a/foods.html
+++ b/foods.html
@@ -36,7 +36,7 @@
                 <a class="nav-link active" href="index.html">Popular Cultures</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="places.html">Next</a>
+                <a class="nav-link" href="music.html">Next</a>
               </li>
             </ul>
            
