--- a/foods.html
+++ b/foods.html
@@ -27,7 +27,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" href="fashion.html">Previous</a>
+                    <a class="nav-link" href="products.html">Previous</a>
                   </li>
               <li class="nav-item text-white">
                 <a class="nav-link" aria-current="page" href="index.html">Home</a>
