--- a/fashion.html
+++ b/fashion.html
@@ -36,7 +36,7 @@
                 <a class="nav-link active" href="#popcultures">Popular Cultures</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="foods.html">Next</a>
+                <a class="nav-link" href="places.html">Next</a>
               </li>
             </ul>
            
